--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
     <div class="container">
          <!-- Todo: add a title for the dashboard using h1 tag -->
-
+         <div id="barchart"></div>
+         <div id="parallelCoordinates"></div>
         <!-- Todo: add visualizations -->
     </div>
 
     <script src="js/d3.v7.min.js"></script>
+    <script src="js/barChart.js"></script>
+    <script src="js/lineChart.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
