--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
          <!-- Todo: add a title for the dashboard using h1 tag -->
          <div id="barchart"></div>
          <div id="parallelCoordinates"></div>
+         <div id="linechart"></div>
         <!-- Todo: add visualizations -->
     </div>
 
