Setup the choropleth chart

--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
     <div class="container">
         <!-- Todo: add a title for the dashboard using h1 tag -->
         <div id="barchart"></div>
-        <div id="parallelCoordinates"></div>
         <div id="linechart"></div>
+        <div id="choroplethchart">
+            <svg width="1200" height="1000" id="mapSVG"></svg>
+            <svg width="1200" height="1000" id="taxSVG"></svg>
+        </div>
         <!-- Todo: add visualizations -->
     </div>
 
     <script src="js/d3.v7.min.js"></script>
     <script src="js/barChart.js"></script>
     <script src="js/lineChart.js"></script>
+    <script src="js/choroplethChart.js"></script>
     <script src="js/main.js"></script>
 </body>
 
