Create the basic dashboard layout

--- a/index.html
+++ b/index.html
@@ -9,15 +9,24 @@
 </head>
 
 <body>
+    <div id="title">
+        <h1>Title</h1>
+    </div>
     <div class="container">
-        <!-- Todo: add a title for the dashboard using h1 tag -->
         <div id="barchart"></div>
         <div id="linechart"></div>
         <div id="choroplethchart">
             <svg width="1200" height="1000" id="mapSVG"></svg>
             <svg width="1200" height="1000" id="taxSVG"></svg>
         </div>
+        <div id="textbox">
+            <h1>Textbox</h1>
+        </div>
         <!-- Todo: add visualizations -->
+    </div>
+
+    <div id="filter-panel">
+        <h1>Filter Panel</h1>
     </div>
 
     <script src="js/d3.v7.min.js"></script>
