Setup the filtering
- Add filtering for the barchart and linechart
- Fix the issue with the map size

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <div id="filter-panel">
         <h1>Filter Panel</h1>
+        <button id="filter-button">Filter</button>
     </div>
 
     <script src="js/d3.v7.min.js"></script>
