Setup the state based filtering

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="title">
-        <h1>Title</h1>
+        <h1>Effect of unemployment on Metro vs non-Metro areas in the US</h1>
     </div>
     <div class="container">
         <div id="barchart"></div>
