--- a/index.html
+++ b/index.html
@@ -9,51 +9,58 @@
 </head>
 
 <body>
-    <div id="title">
-        <h1>Effect of unemployment on Metro vs non-Metro areas in the US</h1>
-    </div>
-    <div class="container">
-        <div id="barchart"></div>
-        <div id="linechart"></div>
-        <div id="choroplethchart">
-            <svg width="1200" height="1000" id="mapSVG"></svg>
-            <svg width="1200" height="1000" id="taxSVG"></svg>
+    <div id="container">
+        <div id="title">
+            <h1>Effect of unemployment on Metro vs non-Metro areas in the US</h1>
         </div>
-        <div id="textbox">
-            <h1>Textbox</h1>
+        <div class="container">
+            <div id="barchart">
+                <h3>Cost effect on metro vs non-metro cities</h3>
+            </div>
+            <div id="linechart">
+                <h3>Employment and unemployment in metro vs non-metro cities</h3>
+            </div>
+            <div id="choroplethchart">
+                <h3>Taxes in metro vs non-metro cities</h3>
+                <svg width="1200" height="1000" id="mapSVG"></svg>
+                <svg width="1200" height="1000" id="taxSVG"></svg>
+            </div>
+            <div id="textbox">
+                <h1>Textbox</h1>
+            </div>
+            <!-- Todo: add visualizations -->
         </div>
-        <!-- Todo: add visualizations -->
-    </div>
 
-    <div id="filter-panel">
-        <h1>Filter Panel</h1>
-        <button id="filter-button">Reset filters</button>
-        <div id="toggle-panel">
-            <input type="checkbox" id="metro-toggle" name="metro-toggle">
-            <label for="metro-toggle">Metro </label>
+        <div id="filter-panel">
+            <h1>Filter Panel</h1>
+            <button id="filter-button">Reset filters</button>
             <div id="toggle-panel">
-                <input type="checkbox" id="non-metro-toggle" name="metro-toggle">
-                <label for="metro-toggle">Non-Metro</label>
+                <input type="checkbox" id="metro-toggle" name="metro-toggle">
+                <label for="metro-toggle">Metro </label>
+                <div id="toggle-panel">
+                    <input type="checkbox" id="non-metro-toggle" name="metro-toggle">
+                    <label for="metro-toggle">Non-Metro</label>
+                </div>
+            </div>
+            <div id="legend-panel">
+                <h2>Legend</h2>
+                <div class="legend-item">
+                    <span class="legend-color" style="background-color: #e7585b;"></span>
+                    <span class="legend-label">Metro</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-color" style="background-color: #f78e39;"></span>
+                    <span class="legend-label">Non-Metro</span>
+                </div>
             </div>
         </div>
-        <div id="legend-panel">
-            <h2>Legend</h2>
-            <div class="legend-item">
-                <span class="legend-color" style="background-color: #e7585b;"></span>
-                <span class="legend-label">Metro</span>
-            </div>
-            <div class="legend-item">
-                <span class="legend-color" style="background-color: #f78e39;"></span>
-                <span class="legend-label">Non-Metro</span>
-            </div>
-        </div>
-    </div>
 
-    <script src="js/d3.v7.min.js"></script>
-    <script src="js/barChart.js"></script>
-    <script src="js/lineChart.js"></script>
-    <script src="js/choroplethChart.js"></script>
-    <script src="js/main.js"></script>
+        <script src="js/d3.v7.min.js"></script>
+        <script src="js/barChart.js"></script>
+        <script src="js/lineChart.js"></script>
+        <script src="js/choroplethChart.js"></script>
+        <script src="js/main.js"></script>
+    </div>
 </body>
 
 </html>
