Add pie-charts to the visuals

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
         <div class="flex-container">
             <div class="flex-item">
                 <div id="barchart">
-                    <h3>Cost effect on metro vs non-metro cities</h3>
+                    <h3 style="display: inline;">Cost effect on metro vs non-metro cities</h3><h3 id="barchart-placeholder" style="display: inline;"></h3>
                 </div>
                 <div id="linechart">
-                    <h3>Employment and unemployment in metro vs non-metro cities</h3>
+                    <h3 style="display: inline;">Employment and unemployment in metro vs non-metro cities</h3><h3 id="linechart-placeholder" style="display: inline;"></h3>
                 </div>
             </div>
             <div class="flex-item">
                 <div id="choroplethchart">
-                    <h3>Taxes in metro vs non-metro cities</h3>
+                    <h3>Taxes in metro vs non-metro cities</h3> 
                     <svg width="1200" height="1000" id="mapSVG"></svg>
                     <svg width="1200" height="1000" id="taxSVG"></svg>
                 </div>
